--- a/ex022/fundo003.html
+++ b/ex022/fundo003.html
@@ -14,12 +14,28 @@
             border-radius: 10px;
             background-image: url('imagens/wallpaper003.jpg');
         }
+
+        #q1 {
+          background-position: left top;
+        }
+
+        #q2 {
+          background-position: left center;
+        }
+
+        #q3 {
+          background-position: right bottom;
+        }
+
+        #q4 {
+          background-position: center center;
+        }
     </style>
   </head>
   <body>
-    <div class="bloco"></div>
-    <div class="bloco"></div>
-    <div class="bloco"></div>
-    <div class="bloco"></div>
+    <div class="bloco" id="q1"></div>
+    <div class="bloco" id="q2"></div>
+    <div class="bloco" id="q3"></div>
+    <div class="bloco" id="q4"></div>
   </body>
 </html>
